@@ -12,8 +12,11 @@ libraryDependencies += "org.slf4j" % "slf4j-log4j12" % "1.7.2"
 
 resolvers += "Akka Repository" at "http://repo.akka.io/releases/"
 
-javaOptions ++= Seq(
-  "-Dsun.io.serialization.extendedDebugInfo=true"
+fork in run := true
+
+javaOptions in run ++= Seq(
+  "-Dsun.io.serialization.extendedDebugInfo=true", 
+  "-XX:+UseConcMarkSweepGC"
 )
 
 
